# rrPlayer

./: README.md  音视频知识要点.md
src/TestDemux/: CMakeLists.txt  main.cpp
src/TestQAudioOutput/: CMakeLists.txt  main.cpp
src/TestQtOpenGL/: TestQtOpenGL.pro  videowidget.cpp  videowidget.h  widget.ui
src/rrPlayer/: audioplay.cpp  audioplay.h  audiothread.cpp  audiothread.h  decode.cpp  decode.h  decodethread.cpp  decodethread.h  demux.cpp  demux.h  demuxthread.cpp  demuxthread.h  main.cpp  mydevice.cpp  mydevice.h  resample.cpp  resample.h  rrPlayer.pro  rrplayer.cpp  rrplayer.h  rrplayer.ui  slider.cpp  slider.h  videocall.h  videothread.cpp  videothread.h  videowidget.cpp  videowidget.h  widget.cpp  widget.h  widget.ui
src/testFfmpeg/: main.cpp  testFfmpeg.pro
src/testSDL/: main.cpp  sdlaudio.cpp  sdlaudio.h  testSDL.pro
